TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-06-16 MickeM
 * Initial (rather crude) NRDP support.

2012-06-16 MickeM
 * Merged in master branch
 * Fixed almost all -Wall warnings (the rest are probably not getting fixed in the near future due to their nature)
 
2012-06-12 MickeM
 * Improved error handling in performance counters #436
 * Improved parsing of "legacy command lines"

2012-06-12 MickeM
 * Added log level = off to disable logging.
 * Added option in NSCAClient to hostname (auto-lc) to use lower case version of hostname. #533
 * Reworked how commands are read.
   If a command is defined without a section (default) no section will be added and instead a comment will be addded on how to add the section.
   This should (I hope) resolve the "missing command" for good.
 * Improved error messages for missing commands
 * Fixed scientific notation on performance data (#)

2012-06-11 MickeM
 * Fixed some gcc compile issues
 * Fixed a lot of gcc -Wall warnings

2012-06-08 MickeM
 * Fixed some issues with real time eventlog.
 * Extended the event log unit tests to encompass the new real-time checks.

2012-06-01 MickeM
 * Tweaked all servers to use the new internals and added first testcase for NSCP socket

2012-05-24 MickeM
 * Reworked real time event log support to be a lot more flexible
   You can now specify all options on a "filter" level.
 * WARNING*
   Old syntax NOT supported (and will not upgrade) but hopefully not to many will be affected.
 * Added support for ipv6 allowed hosts validation

2012-05-21 MickeM
 * Sofia Born (My second daughter)

2012-05-19 MickeM
 * Fixed issue with checking rate counters (such as disk idle %)
 * Fixed (I think) the negative denominator counter issue
 * Fixed so indexes are only converted on \\123\\ and not also \\123 hello world\\ which caused some issues with numeric counter variables.
