@@ -1,3 +1,3 @@
 version=0.4.1
-build=3
-date=2012-06-08
+build=4
+date=2012-06-17
