@@ -4,6 +4,11 @@ TODO:
  * Fix dependonservice LanManWorkStation (old win)
  * Fix RtlStringFromGUID problem on NT4
 
+2012-06-18 MickeM
+ * Fixed issue with parsing in test mode
+ * Fixed Graphite client using wrong time for datestamp
+ * Added so debug NSCA logs host name
+
 2012-06-16 MickeM
  * Initial (rather crude) NRDP support.
 
